// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessage should render with exact matches 1`] = `
<div
  class="euiPanel euiPanel--success euiPanel--paddingSmall euiCallOut euiCallOut--success emotion-euiPanel-none-s-success-euiCallOut"
  data-test-subj="createIndexPatternStatusMessage"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-success"
  >
    <span
      aria-hidden="true"
      class="emotion-euiCallOut__icon"
      color="inherit"
      data-euiicon-type="check"
    />
    <span>
       
      Your index pattern matches 1 source.
    </span>
  </p>
</div>
`;

exports[`StatusMessage should render with no partial matches 1`] = `
<div
  class="euiPanel euiPanel--warning euiPanel--paddingSmall euiCallOut euiCallOut--warning emotion-euiPanel-none-s-warning-euiCallOut"
  data-test-subj="createIndexPatternStatusMessage"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-warning"
  >
    <span>
      The index pattern you entered doesn't match any data streams, indices, or index aliases. You can match 
      <strong>
        2 sources
      </strong>
      .
    </span>
  </p>
</div>
`;

exports[`StatusMessage should render with partial matches 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingSmall euiCallOut euiCallOut--primary emotion-euiPanel-none-s-primary-euiCallOut"
  data-test-subj="createIndexPatternStatusMessage"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-primary"
  >
    <span>
      Your index pattern doesn't match any data streams, indices, or index aliases, but 
      <strong>
        source
      </strong>
       is similar.
    </span>
  </p>
</div>
`;

exports[`StatusMessage should render without a query 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingSmall euiCallOut euiCallOut--primary emotion-euiPanel-none-s-primary-euiCallOut"
  data-test-subj="createIndexPatternStatusMessage"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-primary"
  >
    <span>
      Your index pattern can match 2 sources.
    </span>
  </p>
</div>
`;

exports[`StatusMessage should show that no indices exist 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingSmall euiCallOut euiCallOut--primary emotion-euiPanel-none-s-primary-euiCallOut"
  data-test-subj="createIndexPatternStatusMessage"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-primary"
  >
    <span>
      No data streams, indices, or index aliases match your index pattern.
    </span>
  </p>
</div>
`;

exports[`StatusMessage should show that system indices exist 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingSmall euiCallOut euiCallOut--primary emotion-euiPanel-none-s-primary-euiCallOut"
  data-test-subj="createIndexPatternStatusMessage"
>
  <p
    class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-primary"
  >
    <span>
      No data streams, indices, or index aliases match your index pattern.
    </span>
  </p>
</div>
`;
